2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline.test:      Fixed use and cleanup of temp. files.
	* typedCmdline.test: Fixed use of duplicate test names.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline.test: More boilerplate simplified via use of test support.
	* typedCmdline.test:

2006-01-21  Andreas Kupries  <akupries@shaw.ca>

	* typedCmdline.test: Replaced usage of the made-up command
	  'queryConstraint' with 'testConstraint'.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* typedCmdline.test: Hooked into the new common test support
	* cmdline.test:      code.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2004-11-08  Andreas Kupries <andreask@activestate.com>

	* cmdline.tcl (::cmdline::getKnownOpt): Changed generation of
	  error message for unknown option, re-added the prefix-dash to
	  the option name. See AS Bugzilla Report 32363
	  [http://bugs.activestate.com/show_bug.cgi?id=32363].
	* cmdline.test: Updated testsuite to new error message.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-08-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* typedCmdline.test: Made test 6.14 conditional on version of Tcl,
	  needs different result for 8.5+.

2004-08-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ChangeLog: Typo police.
	* cmdline.tcl:
	* cmdline.man:
	* typedCmdline.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
